2003-09-21  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-editor-node-text.c

	Optimisation of handling for selection changes

2003-09-18  David Malcolm <david@davemalcolm.demon.co.uk>

	--- Version 0.7.2 ---
	
	* cong-dialog.c, cong-dialog.h, cong-file-export.c, cong-file-properties.c, cong-menus.c, cong-node-properties-dialog.c

	Packing fixes for CongDialog; a new tab in node properties dialog listing DTD attributes.
	
2003-09-15  David Malcolm <david@davemalcolm.demon.co.uk>

	* cursor.c

	Cleanup and fixes for the paragraph split routine
	
	* xmldata.c

	Suppressed some debug info

	* cong-editor-area.c, cong-editor-area.h, cong-editor-node-element-structural.c, cong-editor-node-element-unknown.c, plugin-lists-node-element-listitem.c, plugin-paragraph-node-element-paragraph.c

	Generalised the popup dialog to support the unknown, paragraph and list item plugins

	* xmldata.c

	Allow plugin-based tags to appear in the structural popup menus
	
	* popup.c

	Make empty submenus insensitive

	* cong-menus.c, cong-plugin.c, cong-plugin.h, plugin-cleanup-source.c, plugin-docbook.c, plugin-save-dispspec.c, plugin-validate.c, plugin-website.c, popup.c

	Split CongTool into CongDocTool and CongNodeTool

	* cong-document.c, global.h, xmldata.c

	Bugfix for element filtering

2003-09-14  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-node-properties-dialog.c

	Fixed missing gtk_widget_show on XPath; fixed call to get_dtd_element

	* cong-document.c, cong-document.h, global.h, popup.c, xmldata.c

	Moved the get_dtd_element code into CongDocument; wrapped the popup code with a call to CongDocument pending support for inferred DTDs

	* cong-node.c, Makefile.am, xmldata.c

	Moved parts of xmldata.c into a new file (cong-node.c)

2003-09-11  David Malcolm <david@davemalcolm.demon.co.uk>

	* cong-location.c, cong-util.c, cong-util.h, plugin-cleanup-source.c

	Fix for bug 121970: merging of adjacent paras
